--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
         🔊
     </button>
     <audio id="backgroundAudio" autoplay loop>
-        <source src="./image/happy-birthday-314197.mp3" type="audio/mpeg">
+        <source src="../WhatsApp Audio 2025-09-18 at 02.09.38_5ea2ddbf.mp3" type="audio/mpeg">
         </audio>
 </div>
 
